2004/11/08 Morgan Christiansson <drftpd@mog.se>
* Added better handling of file collisions, files are now checksummed 
  in multiple threads and if checksums are identical all but one file is deleted.

2004/11/06 Morgan Christiansson <drftpd@mog.se>
* Continued usermanager cleanup/rewrite.
* Fixed UserManagerConverter with support for converting from 1.1.4 userfiles.

2004/11/03 Morgan Christiansson <drftpd@mog.se>
* Changed userfile directories from {jsx,xstream} to {jsx,xstream}2.
* Renamed usermanagers.
* Integrated and rewrote iamn's dynamic user data plugin.

2004/11/02 Morgan Christiansson <drftpd@mog.se>
* Improved security in SITE CHANGE.
* Revived Mirror plugin, needed for instant mirroring which Archive can't provide.

2004/10/06  Teflon <teflon114@@users.sourceforge.net>
* Fixed root cause of "group= iND" bug in files.mlst

2004/10/05 Morgan Christiansson <drftpd@mog.se>
* Fixed purge with JSXUserManager.
* Added wkly_allotment to SITE USER environment and rewrote .properties format
  for SITE USER output.
* Fixed time to complete output in SiteBot and reviewed all other elapsed outputs.
* Changed default permission in SITE USERS permission handling.
  Defaults to the inverse of the last permission.
  Ex: SITE USERS =deleted has !* as default
      SITE USERS !=deleted has * as default

2004/10/03 Morgan Christiansson <drftpd@mog.se>
* Fixed SiteBot to use section name instead of section path when announcing.
  Thanks to N3m3Sis.
* Fixed SITE SEARCH to require all arguments to match instead of requiring any
  argument to match. Thanks to succo.
* Fixed LinkedRemoteFile.createDirectories()
  Added automatic creation of <sectionname>-NOW symlink.

2004/09/24 Morgan Christiansson <drftpd@mog.se>
* Changed decimal format for bytes formatting to always use dot (.).
  This fixes broken testcase, some ppl might not want . however.
  Feedback?
* Added SITE LINK command, same syntax as ln in GNU fileutils.
  i.e. SITE LINK <target> <link>