@@ -36,7 +36,7 @@ import org.drftpd.usermanager.UserFileException;
 
 /**
  * @author mog
- * @version $Id: Invite.java,v 1.13 2004/11/08 18:39:23 mog Exp $
+ * @version $Id: Invite.java,v 1.14 2004/11/09 15:20:12 mog Exp $
  */
 public class Invite extends GenericCommandAutoService
     implements IRCPluginInterface {
@@ -77,14 +77,12 @@ public class Invite extends GenericCommandAutoService
                 return;
             }
 
-            if (user.checkPassword(args[2])) {
+            boolean success =user.checkPassword(args[2]);
+            getConnectionManager().dispatchFtpEvent(new InviteEvent(
+                    success ? "INVITE" : "BINVITE", msgc.getSource().getNick(), user));
+            if (success) {
                 logger.info("Invited \"" + msgc.getSourceString() +
                     "\" as user " + user.getUsername());
-
-                //_conn.sendCommand(
-                //	new InviteCommand(msgc.getSource(), _channelName));
-                getConnectionManager().dispatchFtpEvent(new InviteEvent(
-                        "INVITE", msgc.getSource().getNick(), user));
             } else {
                 logger.log(Level.WARN,
                     msgc.getSourceString() +
